# ReaEst

./: .gitignore  package-lock.json  package.json
client/: next.config.js  package-lock.json  package.json
client/public/scss/: _custom-homez.scss  _style.scss
client/src/app/: layout.js  page.js
client/src/app/(home)/home/: page.js
client/src/app/(home)/home-v2/: page.js
client/src/app/(pages)/about/: page.js
client/src/app/(pages)/contact/: page.js
client/src/app/(pages)/login/: page.js
client/src/app/register/: page.js
client/src/components/common/: CallToActions.js  DashboardHeader.js  DefaultHeader.js  MainMenu.js
client/src/components/common/advance-filter/: PriceRange.js
client/src/components/common/advance-filter-two/: PriceRange.js
client/src/components/common/default-footer/: ContactMeta.js  Copyright.js  MenuWidget.js  Social.js  Subscribe.js  (+1 more)
client/src/components/property/: FormContact.js  ListingItems.js  ProfessionalInfo.js
client/src/data/: apartmentType.js  listings.js  mobileMenuItems.js  navItems.js
client/src/utilis/: useForm.js
server/: Cargo.toml  create.sql  diesel.toml  package-lock.json  package.json
server/src/: app.js  main.rs  models.rs  routes.rs  schema.rs  utils.rs
server/src/database/: connection.js  image.js  loginOption.js  property.js  user.js
server/src/models/: address.rs  login_option.rs  pay_type.rs  property.rs  property_category.rs  user.rs
server/src/routes/: login.js  property.js  property.rs  user.js  user.rs  validate-req.js
server/src/utils/: jwt.rs  path.rs
server/tests/: images.rs
(+79 files in other folders)
