[package]
name = "reaest-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
tower-cookies = "0.11.0"
diesel = { version = "2.2.11", features = ["postgres", "chrono", "uuid", "numeric"] }
diesel-async = { version = "0.6.1", features = ["postgres", "pool", "bb8"] } 
bb8 = "0.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
# libvips = "1.7.1"
libvips_windows = { path = "../../libvips-rust-bindings" }
num_cpus = "1.17.0"
bytes = "1.10.1"
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12.22", features = ["multipart", "json"] }